--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@fortawesome/free-regular-svg-icons": "^5.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "firebase": "^7.6.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-quill": "^1.3.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
