--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-lazyload": "^2.6.5",
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.3.0"
